css/index.css
*:focus {
	outline: none!important;
} 
body { 
  background: url(index.png) no-repeat center center fixed; 
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
}
/* Navigation Bar */

.row {
	
	margin-top:16%;
	background-color: transparent;
	text-align: center; 
	margin-bottom: 20px;
	
}
.connect {
        font-family: 'Karla', sans-serif;
        font-size: 78px;
        color: #fff;
    }
/* Main page content ends */
.opportunities {
	font-family: 'Open Sans Condensed', sans-serif;
	font-size: 73px;
	color: #fff;	
}

h5{ 
	color: white;
	font-family: 'Open Sans Condensed', sans-serif;
	font-size: 30px;
}
/* Ghost Button */
.btn-default{

	background: transparent;
	width: 300px;
}
.btn:hover {
  background-color: rgba(0, 0, 0, 0.5);
}
a {
    color: white;
    text-decoration: none;
	margin: 5px;
}

a:hover 
{
    color: white; 
    text-decoration:none; 
    cursor:pointer;  
}
footer {
  
  position: absolute;
  bottom: 0;
  width: 100%;
  /* Set the fixed height of the footer here */
  background-color:rgba(0,0,0,0.3);
  font-size: 30px;
}
footer > .left-content > a {
    text-decoration: none;
    float: left;
    color: lightgrey;
    font-size: 15px;
    margin-left: 5px;
    margin-top: 5px;
}

footer > .right-content > a {
    text-decoration: none;
    float: right;
    color: lightgrey;
    margin: 5px;
    font-size: 20px;
}
@media only screen 
and (min-device-width : 320px) 
and (max-device-width : 480px) 
{ 
  footer {
  position: relative;
  bottom: 0;
  width: 100%;
  /* Set the fixed height of the footer here */
  background-color:rgba(0,0,0,1);
  font-size: 30px;
}
}

/* Footer Style */

